--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Skeleton for Society Pro material design applications",
   "main": "default.htm",
   "devDependencies": {
+    "bower": "^1.3.1",
+    "http-server": "^0.6.1",
     "karma": "~0.10",
     "protractor": "~0.20.1",
-    "http-server": "^0.6.1",
-    "bower": "^1.3.1",
-    "shelljs": "^0.2.6"
+    "selenium-webdriver": "^2.40.0",
+    "shelljs": "^0.2.6",
+    "webdriverjs-retry": "^0.2.0"
   },
   "directories": {
     "doc": "docs",
@@ -16,16 +18,12 @@
   },
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000",
-
     "pretest": "npm install; npm run update-webdriver",
     "test": "protractor test/protractor-conf.js",
-    
     "karma": "karma start test/karma.conf.js",
     "karma-single-run": "karma start test/karma.conf.js  --single-run",
-
     "update-webdriver": "webdriver-manager update",
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   },
