--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "html5-polymer-app-skel",
+  "name": "html5-group-manager",
   "version": "0.0.1",
-  "description": "Skeleton for Society Pro material design applications",
-  "main": "default.htm",
+  "description": "Material design group interface",
+  "main": "index.html",
   "devDependencies": {
     "bower": "^1.3.1",
     "http-server": "^0.6.1",
     "karma": "~0.10",
-    "protractor": "~0.20.1",
+    "protractor": "~1.0.0",
     "selenium-webdriver": "^2.40.0",
     "shelljs": "^0.2.6",
     "webdriverjs-retry": "^0.2.0"
+    "http-server": "^0.6.1",
+    "bower": "^1.3.1",
+    "shelljs": "^0.2.6"
   },
   "directories": {
     "doc": "docs",
@@ -21,7 +24,8 @@
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000",
     "pretest": "npm install; npm run update-webdriver",
-    "test": "protractor test/protractor-conf.js",
+    "test": "node_modules/protractor/bin/protractor test/protractor-conf.js",
+    
     "karma": "karma start test/karma.conf.js",
     "karma-single-run": "karma start test/karma.conf.js  --single-run",
     "update-webdriver": "webdriver-manager update",
@@ -29,13 +33,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/CambrianExp/html5-app-skel.git"
+    "url": "https://github.com/SocietyPro/html5-group-manager.git"
   },
   "keywords": [
     "cambrian",
     "SocietyPro"
   ],
-  "author": "CambrianExp",
+  "author": "SocietyPro",
   "license": "MIT",
   "readmeFilename": "README.md"
 }
