--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "protractor": "~1.0.0",
     "selenium-webdriver": "^2.40.0",
     "shelljs": "^0.2.6",
-    "webdriverjs-retry": "^0.2.0"
+    "webdriverjs-retry": "^0.2.0",
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6"
