--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "http-server": "^0.6.1",
     "karma": "~0.10",
     "protractor": "~1.0.0",
-    "selenium-webdriver": "^2.40.0",
+    "selenium-webdriver": "2.40.0",
     "shelljs": "^0.2.6",
     "webdriverjs-retry": "^0.2.0",
     "http-server": "^0.6.1",
