--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,6 @@
     "polymer": "Polymer/polymer#~0.3.5",
     "core-elements": "Polymer/core-elements#~0.3.5",
     "paper-elements": "Polymer/paper-elements#~0.3.5",
-    "japi": "git@github.com:SocietyPro/japi.git"
+    "japi": "https://github.com/SocietyPro/japi.git"
   }
 }
