--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
     "core-elements": "Polymer/core-elements#~0.3.5",
     "paper-elements": "Polymer/paper-elements#~0.3.5",
     "japi": "https://github.com/SocietyPro/japi.git"
+  },
+  "devDependencies": {
+    "jquery": "~2.1.1"
   }
 }
