--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,9 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.5",
-    "core-elements": "Polymer/core-elements#~0.3.5",
-    "paper-elements": "Polymer/paper-elements#~0.3.5",
-    "japi": "https://github.com/SocietyPro/japi.git"
+    "japi": "https://github.com/SocietyPro/japi.git",
+    "angular": "1.3.0-beta.19",
+    "angular-animate": "1.3.0-beta.19"
   },
   "devDependencies": {
     "jquery": "~2.1.1"
