--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "japi": "https://github.com/SocietyPro/japi.git",
     "angular": "1.3.0-beta.19",
-    "angular-animate": "1.3.0-beta.19"
+    "angular-animate": "1.3.0-beta.19",
+    "sopro-material-styles": "https://github.com/sopro-components/sopro-material-styles.git"
   },
   "devDependencies": {
     "jquery": "~2.1.1"
