--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,14 @@
 {
-  "name": "cambrian-app-skel",
-  "version": "0.0.1",
+  "name": "html5-group-manager",
+  "version": "0.1.0",
   "authors": [
-    "CambrianExp"
+    "SocietyPro",
+    "plato@societypro.org"
   ],
-  "description": "Skeleton for Cambrian applications",
-  "main": "default.htm",
+  "description": "SocietyPro Group Management App",
+  "main": "index.html",
   "license": "MIT",
-  "homepage": "http://cambrian.org",
+  "homepage": "https://github.com/SocietyPro/html5-group-manager",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -16,12 +17,11 @@
     "tests"
   ],
   "dependencies": {
+    "jquery": "~2.1.1",
     "japi": "https://github.com/SocietyPro/japi.git",
     "angular": "1.3.0-beta.19",
     "angular-animate": "1.3.0-beta.19",
-    "sopro-material-styles": "https://github.com/sopro-components/sopro-material-styles.git"
-  },
-  "devDependencies": {
-    "jquery": "~2.1.1"
+    "sopro-material": "https://github.com/sopro-components/sopro-material.git#0.1.0",
+    "roboto": "https://github.com/sopro-components/roboto.git"
   }
 }
