--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "html5-group-manager",
-  "version": "0.0.1",
-  "description": "Material design group interface",
+  "version": "0.1.0-rc1",
+  "description": "SocietyPro groups and governance",
   "main": "index.html",
   "devDependencies": {
     "bower": "^1.3.1",
     "http-server": "^0.6.1",
     "karma": "~0.10",
-    "protractor": "~1.0.0",
+    "protractor": "~1.2.0",
     "selenium-webdriver": "2.40.0",
     "shelljs": "^0.2.6",
     "webdriverjs-retry": "^0.2.0",
@@ -20,15 +20,13 @@
     "test": "test"
   },
   "scripts": {
-    "postinstall": "bower install",
-    "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000",
-    "pretest": "npm install; npm run update-webdriver",
-    "test": "node_modules/protractor/bin/protractor test/protractor-conf.js",
+    "postinstall": "node node_modules/bower/bin/bower install; node node_modules/protractor/bin/webdriver-manager update",
+    "start": "node node_modules/http-server/bin/http-server -a localhost -p 8000",
+    "test": "node node_modules/protractor/bin/protractor test/protractor-conf.js",
     
     "karma": "karma start test/karma.conf.js",
     "karma-single-run": "karma start test/karma.conf.js  --single-run",
-    "update-webdriver": "webdriver-manager update",
+    "update-webdriver": "node node_modules/protractor/bin/webdriver-manager update",
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   },
   "repository": {
