--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "webdriverjs-retry": "^0.2.0",
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
-    "shelljs": "^0.2.6"
+    "shelljs": "^0.2.6",
+    "jasmine-spec-reporter": "^0.6.0"
   },
   "directories": {
     "doc": "docs",
@@ -23,7 +24,6 @@
     "postinstall": "node node_modules/bower/bin/bower install; node node_modules/protractor/bin/webdriver-manager update",
     "start": "node node_modules/http-server/bin/http-server -a localhost -p 8000",
     "test": "node node_modules/protractor/bin/protractor test/protractor-conf.js",
-    
     "karma": "karma start test/karma.conf.js",
     "karma-single-run": "karma start test/karma.conf.js  --single-run",
     "update-webdriver": "node node_modules/protractor/bin/webdriver-manager update",
