--- a/package.json
+++ b/package.json
@@ -5,29 +5,30 @@
   "main": "index.html",
   "devDependencies": {
     "bower": "^1.3.1",
+    "grunt": "^0.4.5",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-git-them-all": "0.0.10",
     "http-server": "^0.6.1",
+    "jasmine-spec-reporter": "^0.6.0",
     "karma": "~0.10",
     "protractor": "~1.2.0",
     "selenium-webdriver": "2.40.0",
     "shelljs": "^0.2.6",
-    "webdriverjs-retry": "^0.2.0",
-    "http-server": "^0.6.1",
-    "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "jasmine-spec-reporter": "^0.6.0"
+    "webdriverjs-retry": "^0.2.0"
   },
   "directories": {
     "doc": "docs",
     "test": "test"
   },
   "scripts": {
-    "postinstall": "node node_modules/bower/bin/bower install",
     "start": "node node_modules/http-server/bin/http-server -a localhost -p 8000",
     "test": "node node_modules/protractor/bin/protractor test/protractor-conf.js",
     "karma": "karma start test/karma.conf.js",
     "karma-single-run": "karma start test/karma.conf.js  --single-run",
     "update-webdriver": "node node_modules/protractor/bin/webdriver-manager update",
-    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\"",
+    "deploy": "node node_modules/grunt/bin/grunt"
   },
   "repository": {
     "type": "git",
