--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,11 @@
     "angular": "1.3.0-beta.19",
     "angular-animate": "1.3.0-beta.19",
     "sopro-material": "https://github.com/sopro-components/sopro-material.git#0.1.0",
-    "roboto": "https://github.com/sopro-components/roboto.git"
+    "roboto": "https://github.com/sopro-components/roboto.git",
+    "angular-route": "~1.3.3"
+  },
+  "resolutions": {
+    "angular": "1.3.0",
+    "angular-route": "~1.3.3"
   }
 }
